# limit-order-book

./: .gitignore  CMakeLists.txt  Makefile  PRD.md  README.md
include/lob/: csv_io.hpp  memory_pool.hpp  order_book.hpp  types.hpp
notebooks/: obi_study.ipynb
python/: clean_messages.py  fetch_hf_lobster.py  generate_sample_data.py  lobster_orderbook_to_snapshots.py
src/: main.cpp  order_book.cpp
tests/: test_order_book.cpp
